Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignTextText.quorum
text t = "t"
output t