Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextBooleanWrapped.quorum
class main
    action main
        text t = true
    end
end